# streamlit-template

./: pyproject.toml  setup.sh  🏠_Home.py
api/: utils.py
pages/: 01_💻_Application.py
