[tool.poetry]
name = "app"
version = "0.0.1"
description = ""
authors = ["Aditya Wardianto <83759122+ditw11mhs@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.12.2"
numpy = "^1.23.3"
plotly = "^5.10.0"
stqdm = "^0.0.4"
scipy = "^1.9.3"
matplotlib = "^3.7.1"
polars = "^0.17.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
jupyterlab = "^3.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
